# twitter-auto

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
twitter_auto/: __main__.py  cookies.py
