[project]
name = "twitter_auto"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishabh Mittal",email = "connect@rishabhm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "selenium (>=4.27.1,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
isort = "^5.13.2"
ruff = "^0.9.2"
black = "^24.10.0"
pre-commit = "^4.0.1"

[tool.pyright]
reportUnknownMemberType = false
